Update bindings and add submodules for ease of use