@@ -1,8 +1,9 @@
 import org.apache.tools.ant.taskdefs.condition.Os
+import java.lang.IllegalStateException
 
 plugins {
     id("java")
-    id("edu.sc.seis.launch4j") version("3.0.5")
+    id("com.github.johnrengelman.shadow") version("8.1.1")
 }
 
 java {
@@ -25,24 +26,51 @@ dependencies {
     compileOnly("com.google.code.findbugs:jsr305:3.0.2")
 }
 
-launch4j {
-    mainClassName = "yionos.demo.Main"
-    jvmOptions.addAll(listOf(
-            "--enable-preview",
-            "--enable-native-access=ALL-UNNAMED"
-    ))
-    bundledJrePath = System.getProperty("java.home")
-    requires64Bit = true
-    headerType = "console"
+val shadersDirectory = "$projectDir/shaders"
+val spvOutputDirectory = layout.buildDirectory.map { it.file("shaders-spv/") }.get().asFile
+task("compileShaders") {
+    group = "yionos"
+
+    doFirst {
+        if (!(spvOutputDirectory.exists() || spvOutputDirectory.mkdir())) {
+            throw IllegalStateException("Unable to create shaders output directory.")
+        }
+    }
+
+    doLast {
+        fileTree(shadersDirectory).onEach { file ->
+            exec {
+                workingDir(projectDir)
+                executable("glslc")
+                args(listOf(
+                    "-finvert-y", "--target-env=vulkan1.2", "-O",
+                    "-I$shadersDirectory",
+                    "-o", "$spvOutputDirectory/${file.nameWithoutExtension}.${file.extension}.spv",
+                    file
+                ))
+            }
+        }
+    }
 }
 
 tasks.withType<JavaExec> {
     jvmArgs(listOf(
-            "--enable-native-access=ALL-UNNAMED",
-            "-ea"
+            "--enable-native-access=ALL-UNNAMED"
     ))
 
     if (Os.isFamily(Os.FAMILY_MAC)) {
         jvmArgs("-XstartOnFirstThread")
     }
+}
+
+tasks.jar {
+    manifest {
+        attributes["Main-Class"] = "yionos.demo.Main"
+    }
+}
+
+tasks.shadowJar {
+    archiveBaseName = "yionos-demo"
+    archiveClassifier = ""
+    archiveVersion = ""
 }
